@@ -1,5 +1,8 @@
 2003-07-04  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
+	* tests/cmdAH.test: Made tests of [file mtime] work better on FAT
+	filesystems. [Patch 760768]  Also a little general cleanup.
+
 	* generic/tclCmdMZ.c (Tcl_StringObjCmd): Made [string map] accept
 	dictionaries for maps.  This is much trickier than it looks, since
 	map entry ordering is significant.  [Bug 759936]
